--- a/contato.html
+++ b/contato.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Anna Bella - Contato</title>
 
-		<link rel="stylesheet" type="text/css" href="estilo.css">
+		<link rel="stylesheet" type="text/css" href="css/estilo.css">
 	</head>
 	<body>
 
